Fix overflow property in integrationsList for consistent layout behavior

--- a/src/app/pages/Home/company-logos-slider/company-logos-slider.component.scss
+++ b/src/app/pages/Home/company-logos-slider/company-logos-slider.component.scss
@@ -4,6 +4,7 @@
     gap: 40px;
     align-items: center;
     justify-content: space-between;
+    overflow: hidden;
 }
 .container.bg {
     padding-top: 20px;
